--- a/10-funcitons-matrix-C/10-functions-matrix-C.lyx
+++ b/10-funcitons-matrix-C/10-functions-matrix-C.lyx
@@ -1667,12 +1667,11 @@ void bersaglio(int m[][N], int n) {
 \end_layout
 
 \begin_layout Subsection
-Soluzione per relazione tra valore e indici
+Soluzione per simmetria
 \end_layout
 
 \begin_layout Standard
-Questa soluzione propone di identificare le relazioni tra gli indici e il
- valore ed eventualmente sfruttare la simmetria del pattern per risparmiare
+Questa soluzione propone di sfruttare la simmetria del pattern per risparmiare
  calcoli.
 \end_layout
 
@@ -1929,12 +1928,13 @@ Questa soluzione propone di identificare le relazioni tra gli indici e il
 \end_layout
 
 \begin_layout Standard
-In questa sotto-matrice (si consideri la parte non nulla) vige la regola
- 
+Questa sotto-matrice (si consideri la parte non nulla) si può riempire con
+ la regola definita nella versione precedente limitata al solo quadrante
+ in alto a sinistra.
 \end_layout
 
 \begin_layout LyX-Code
-m[i][j] = ((i + 1) + (j + 1)) / 2
+m[i][j] = k
 \end_layout
 
 \begin_layout Standard
@@ -1947,6 +1947,10 @@ m[i][n-1-j] = m[i][j]
 
 \begin_layout LyX-Code
 m[n-1-i][j] = m[i][j]
+\end_layout
+
+\begin_layout LyX-Code
+m[n-1-i][n-1-j] = m[i][j]
 \end_layout
 
 \begin_layout Standard
@@ -1962,7 +1966,7 @@ status open
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
-Bersaglio (relazione tra valore e indici)
+Bersaglio (per simmetria)
 \end_layout
 
 \end_inset
@@ -1982,57 +1986,62 @@ void bersaglio(int m[][N], int n) {
 
 \begin_layout LyX-Code
 
-	for (i = 0; i < n / 2; i++) {
+	for (k = 0; k < (n + 1) / 2; k++)
 \end_layout
 
 \begin_layout LyX-Code
 
-		for (j = 0; j < n / 2; j++) {
+		for (i = 0; i < (n + 1) / 2; i++) {
 \end_layout
 
 \begin_layout LyX-Code
 
-			m[i][j] = (i + j + 2) / 2;
+			for (j = 0; j < (n + 1) / 2; j++) {
 \end_layout
 
 \begin_layout LyX-Code
 
-			/* per simmetria, completo la riga */
+				m[i][j] = k + 1
 \end_layout
 
 \begin_layout LyX-Code
 
-			m[i][n-j-1] = m[i][j];
+				/* per simmetria, completo la riga */
 \end_layout
 
 \begin_layout LyX-Code
 
-			/* per simmetria, completo la colonna */
+				m[i][n-j-1] = m[i][j];
 \end_layout
 
 \begin_layout LyX-Code
 
-			m[n-1-i][j] = m[i][j];
+				/* per simmetria, completo la colonna */
 \end_layout
 
 \begin_layout LyX-Code
 
-			/* completo l'ultimo quadrante */
+				m[n-1-i][j] = m[i][j];
 \end_layout
 
 \begin_layout LyX-Code
 
-			m[n-1-i][n-1-j] = m[i][j];
+				/* completo l'ultimo quadrante */
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[n-1-i][n-1-j] = m[i][j];
+\end_layout
+
+\begin_layout LyX-Code
+
+			}
 \end_layout
 
 \begin_layout LyX-Code
 
 		}
-\end_layout
-
-\begin_layout LyX-Code
-
-	}
 \end_layout
 
 \begin_layout LyX-Code
@@ -2505,7 +2514,7 @@ n = 6
 \end_layout
 
 \begin_layout Subsection
-Soluzione C
+Soluzione con condizione esatta
 \end_layout
 
 \begin_layout Standard
@@ -2552,7 +2561,7 @@ void farfalla(int m[][N], int n) {
 
 \begin_layout LyX-Code
 
-	int i, j, k; 
+	int i, j; 
 \end_layout
 
 \begin_layout LyX-Code
@@ -2583,6 +2592,136 @@ void farfalla(int m[][N], int n) {
 \begin_layout LyX-Code
 
 				m[i][j] = 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+	return;
+\end_layout
+
+\begin_layout LyX-Code
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage clearpage
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Soluzione per simmetria
+\end_layout
+
+\begin_layout Standard
+Similmente all'esercizio precedente, è possibile definire solo un quadrante
+ ed applicare per simmetria il pattern al resto della matrice.
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+lstparams "language=C,numbers=left,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline false
+status open
+
+\begin_layout LyX-Code
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Farfalla (per simmetria)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+
+void farfalla(int m[][N], int n) { 
+\end_layout
+
+\begin_layout LyX-Code
+
+	int i, j; 
+\end_layout
+
+\begin_layout LyX-Code
+
+	for (i = 0; i < (n + 1) / 2; i++) 
+\end_layout
+
+\begin_layout LyX-Code
+
+		for (j = 0; j < (n + 1) / 2; j++) 
+\end_layout
+
+\begin_layout LyX-Code
+
+			if (i < j) {
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[i][j] = 0;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[i][n-1-j] = 0;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[n-1-i][j] = 0;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[n-1-i][n-1-j] = 0;
+\end_layout
+
+\begin_layout LyX-Code
+
+			}
+\end_layout
+
+\begin_layout LyX-Code
+
+			else {
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[i][j] = 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[i][n-1-j] = 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[n-1-i][j] = 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+				m[n-1-i][n-1-j] = 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+			}
 \end_layout
 
 \begin_layout LyX-Code
