--- a/08-matrix-C/08-matrix-C.lyx
+++ b/08-matrix-C/08-matrix-C.lyx
@@ -644,7 +644,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-0
+4
 \end_layout
 
 \end_inset
@@ -653,7 +653,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+0
 \end_layout
 
 \end_inset
@@ -1084,7 +1084,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-0
+4
 \end_layout
 
 \end_inset
@@ -1093,7 +1093,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+0
 \end_layout
 
 \end_inset
@@ -1120,7 +1120,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-0
+4
 \end_layout
 
 \end_inset
@@ -1129,7 +1129,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+0
 \end_layout
 
 \end_inset
@@ -1156,7 +1156,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-0
+4
 \end_layout
 
 \end_inset
@@ -1165,7 +1165,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+0
 \end_layout
 
 \end_inset
@@ -1192,7 +1192,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-0
+4
 \end_layout
 
 \end_inset
@@ -1201,7 +1201,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+0
 \end_layout
 
 \end_inset
@@ -1222,15 +1222,6 @@ Es:
 
 \begin_layout Plain Layout
 3
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-0
 \end_layout
 
 \end_inset
@@ -1248,6 +1239,15 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
+0
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
 
 \end_layout
 
@@ -1258,15 +1258,6 @@ Es:
 
 \begin_layout Plain Layout
 3
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-0
 \end_layout
 
 \end_inset
@@ -1284,6 +1275,15 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
+0
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
 
 \end_layout
 
@@ -1294,6 +1294,15 @@ Es:
 
 \begin_layout Plain Layout
 3
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+5
 \end_layout
 
 \end_inset
@@ -1311,15 +1320,6 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-5
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
 
 \end_layout
 
@@ -1338,7 +1338,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-7
+5
 \end_layout
 
 \end_inset
@@ -1347,7 +1347,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-5
+7
 \end_layout
 
 \end_inset
@@ -1394,7 +1394,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-6
+0
 \end_layout
 
 \end_inset
@@ -1404,6 +1404,24 @@ Es:
 
 \begin_layout Plain Layout
 1
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+6
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
 \end_layout
 
 \end_inset
@@ -1421,7 +1439,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+1
 \end_layout
 
 \end_inset
@@ -1439,43 +1457,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-1
-\end_layout
 
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-0
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-6
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-1
 \end_layout
 
 \end_inset
@@ -1485,6 +1467,24 @@ Es:
 
 \begin_layout Plain Layout
 8
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+1
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+6
 \end_layout
 
 \end_inset
@@ -1510,7 +1510,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-9
+4
 \end_layout
 
 \end_inset
@@ -1519,7 +1519,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-4
+9
 \end_layout
 
 \end_inset
@@ -1548,7 +1548,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-7
+5
 \end_layout
 
 \end_inset
@@ -1557,7 +1557,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-5
+7
 \end_layout
 
 \end_inset
@@ -1568,7 +1568,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-6
+8
 \end_layout
 
 \end_inset
@@ -1586,7 +1586,7 @@ Es:
 \begin_inset Text
 
 \begin_layout Plain Layout
-8
+6
 \end_layout
 
 \end_inset
@@ -1761,7 +1761,7 @@ void quadratoMagico(int mat[][MAX_DIM], int n){
 
 \begin_layout LyX-Code
 
-	int i, j, k ;     
+	int i, j, k;     
 \end_layout
 
 \begin_layout LyX-Code
@@ -1796,39 +1796,85 @@ void quadratoMagico(int mat[][MAX_DIM], int n){
 
 \begin_layout LyX-Code
 
-	/* passa a riga immediatamente precedente */
-\end_layout
-
-\begin_layout LyX-Code
-
-		if (mat[i][j] != 0) 
-\end_layout
-
-\begin_layout LyX-Code
-
-			i = (i - 1) % n;   
-\end_layout
-
-\begin_layout LyX-Code
-
 		mat[i][j] = k + 1;   
 \end_layout
 
 \begin_layout LyX-Code
 
-/* indice + 1 % n consente di restare sempre nei limiti, passando alla riga
+/* indice + 1 % n consente di restare sempre nel limite, passando alla riga
  o colonna successiva considerando adiacenti la l'indice n-1 e 0.
- Infatti n - 1 + 1 % n = 0 */ 
+ Infatti (n - 1) + 1 % n == 0 */ 
 \end_layout
 
 \begin_layout LyX-Code
 
-		i = (i + 1) % n;  
+		i = (i + 1) % n;
 \end_layout
 
 \begin_layout LyX-Code
 
 		j = (j + 1) % n; 
+\end_layout
+
+\begin_layout LyX-Code
+
+		/* Se le nuove coordinate così trovate sono già occupate, passa alla riga
+ precedente rispetto all'ultima scritta */
+\end_layout
+
+\begin_layout LyX-Code
+
+		if (mat[i][j] != 0) {
+\end_layout
+
+\begin_layout LyX-Code
+
+			i = i - 2;
+\end_layout
+
+\begin_layout LyX-Code
+
+			j = j - 1;
+\end_layout
+
+\begin_layout LyX-Code
+
+			/* evita indici negativi conservando adiacenza tra primo e ultmo */
+\end_layout
+
+\begin_layout LyX-Code
+
+			if (i < 0) {
+\end_layout
+
+\begin_layout LyX-Code
+
+				i = i + n;
+\end_layout
+
+\begin_layout LyX-Code
+
+			}
+\end_layout
+
+\begin_layout LyX-Code
+
+			if (j < 0) {
+\end_layout
+
+\begin_layout LyX-Code
+
+				j = j + n;
+\end_layout
+
+\begin_layout LyX-Code
+
+			}
+\end_layout
+
+\begin_layout LyX-Code
+
+		} 
 \end_layout
 
 \begin_layout LyX-Code
